@startuml
'https://plantuml.com/class-diagram

abstract class Shape
class Rectangle

class Parallelogram {

}
class Circle

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

class ArrayList {
Object[] elementData
size()
}

enum TimeUnit {
DAYS
HOURS
MINUTES
}

@enduml